# game-template

./: CMakeLists.txt  README.md
LightYears/: CMakeLists.txt
LightYears/includes/: player.h
LightYears/includes/framework/: app.h
LightYears/src/: main.cpp  player.cpp
LightYears/src/framework/: app.cpp
